--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,11 @@ provider:
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
       Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
+    - Effect: Allow
+      Action:
+        - comprehend:DetectDominantLanguage
+        - translate:TranslateText
+      Resource: "*"
 
 functions:
   create:
